@@ -1,10 +1,9 @@
 package com.dwbh.backend.service.counselor_hire;
 
+import com.dwbh.backend.dto.counselor_hire.*;
 import com.dwbh.backend.common.util.AuthUtil;
-import com.dwbh.backend.dto.counselor_hire.CounselorDTO;
-import com.dwbh.backend.dto.counselor_hire.CounselorDetailResponse;
-import com.dwbh.backend.entity.CounselorHire;
 import com.dwbh.backend.entity.CounselorAge;
+import com.dwbh.backend.entity.CounselorHire;
 import com.dwbh.backend.entity.CounselorType;
 import com.dwbh.backend.entity.User;
 import com.dwbh.backend.exception.CustomException;
@@ -12,30 +11,29 @@ import com.dwbh.backend.exception.ErrorCodeType;
 import com.dwbh.backend.repository.counselor_hire.*;
 import com.dwbh.backend.repository.user.UserRepository;
 import com.dwbh.backend.service.UserService;
-import jakarta.persistence.EntityNotFoundException;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
-import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class CounselorService {
 
     private final CounselorRepository counselorRepository;
     private final UserRepository userRepository;
     private final CounselorAgeRepository counselorAgeRepository;
     private final CounselorTypeRepository counselorTypeRepository;
-    private final CounselorCustomRepositoryImpl customRepositoryimpl;
     private final UserService userService;
 
     // 게시글 등록
     @Transactional
-    public void savePost(CounselorDTO savePostReqDTO) {
+    public void savePost(CreateCounselorRequest request) {
         Long loginUserId = 1L;  // 예시로 로그인된 사용자 ID 설정
 
         User foundUser = userRepository.findById(loginUserId)
@@ -61,28 +59,35 @@ public class CounselorService {
     }
 
     // 모든 게시글 조회
-    public List<CounselorDTO> findAllPosts() {
-        List<CounselorHire> counselorHires = counselorRepository.findAll();
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+    public CounselorListResponse readCounselorList(ReadCounselorListRequest request, Pageable pageable) {
+        Page<CounselorDTO> counselorList = counselorRepository.findAllJoinUser(request, pageable);
 
-        return counselorHires.stream()
-                .map(counselor -> new CounselorDTO(
-                        counselor.getHireSeq(),
-                        counselor.getHireTitle(),
-                        counselor.getHireContent(),
-                        counselor.getHireGender().toString(),
-//                        counselor.getCounselorAge().getCounselorAgeRangeSeq(),
-//                        counselor.getCounselorType().getCounselorTypeSeq(),
-                        Optional.ofNullable(counselor.getRegDate())
-                                .map(date -> date.format(formatter))
-                                .orElse(null)
-                ))
-                .collect(Collectors.toList());
+        List<CounselorAge> counselorAges = counselorAgeRepository.findAll();
+        List<CounselorAgeDTO> counselorAgeList = counselorAges.stream().map(
+                counselorAge -> new CounselorAgeDTO(
+                        counselorAge.getCounselorAgeRangeSeq(),
+                        counselorAge.getCounselorAgeRange()
+                )
+        ).toList();
+
+        List<CounselorType> counselorTypes = counselorTypeRepository.findAll();
+        List<CounselorTypeDTO> counselorTypeList = counselorTypes.stream().map(
+                counselorType -> new CounselorTypeDTO(
+                        counselorType.getCounselorTypeSeq(),
+                        counselorType.getCounselorType()
+                )
+        ).toList();
+
+        return new CounselorListResponse(
+                counselorList,
+                counselorAgeList,
+                counselorTypeList
+        );
     }
 
     // 게시글 수정
     @Transactional
-    public void updatePost(Long id, CounselorDTO updatePostReqDTO) {
+    public void updatePost(Long id, CounselorUpdateRequest updatePostReqDTO) {
         CounselorHire counselorHire = counselorRepository.findById(id)
                 .orElseThrow(() -> new IllegalArgumentException("게시글을 찾을 수 없습니다."));
 
@@ -120,6 +125,6 @@ public class CounselorService {
             throw new CustomException(ErrorCodeType.POST_NOT_FOUND);
         }
 
-        return customRepositoryimpl.findCounselorHireDetail(hireSeq, currentUserSeq);
+        return counselorRepository.findCounselorHireDetail(hireSeq, currentUserSeq);
     }
 }
